--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -261,3 +261,47 @@
   .inline-block {
     display: inline-block;
   }
+
+  .br2 {
+    border-radius: 2px;
+  }
+
+  .br3 {
+    border-radius: 3px;
+  }
+
+  .br4 {
+    border-radius: 4px;
+  }
+
+  .br5 {
+    border-radius: 5px;
+  }
+
+  .br6 {
+    border-radius: 6px;
+  }
+
+  .br7 {
+    border-radius: 7px;
+  }
+
+  .br8 {
+    border-radius: 8px;
+  }
+
+  .br9 {
+    border-radius: 9px;
+  }
+
+  .br10 {
+    border-radius: 10px;
+  }
+
+  .br11 {
+    border-radius: 11px;
+  }
+
+  .br12 {
+    border-radius: 12px;
+  }
